--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cesium Gaussian Splatting Test</title>
-  <link rel="stylesheet" href="css/app.css">
+  <link rel="stylesheet" href="./public/css/app.css">
 </head>
 <body>
   <div id="three"></div>
   <div id="cesium"></div>
-  <script type="module" src="src/main.ts"></script>
+  <script type="module" src="./src/main.ts"></script>
 </body>
 </html>
